eks-deploy/app.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app-deployment
  labels:
    app: app-php
spec:
  replicas: 1
  selector:
    matchLabels:
      app: app-php
  template:
    metadata:
      labels:
        app: app-php
    spec:
      containers:
        ports:
        - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: app-service
spec:
  selector:
    app: app-php
  type: LoadBalancer  
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
      nodePort: 30000
